package HW7.flyweight;

public interface CharacterProperty {
    String toString();
}
