@startuml

class Character {
    - character: char
    - characterProperty: CharacterProperties

    + Character(character:char, characterProperty:CharacterProperties)
}

class CharacterProperties {
    - font: String {readOnly}
    - color: String {readOnly}
    - size: int {readOnly}

    + CharacterProperties(font:String, color:String, size:int)
    + setCharacter(character:char): void
    + setCharacterProperty(CharacterProperties characterProperty): void
    + getCharacter(): char
    + getFont(): String
    + getColor(): String
    + getSize(): int
}

class CharacterPropertiesFactory {
    - flyweights: Map<String, CharacterProperties> {readOnly}

    + setAndRetrieveFlyweightCharacterProperties(font:String, color:String): CharacterProperties
    + sizeOfMap(): int
    + getFont(): String
    + getColor(): String
    + getSize(): int
}

class Document {
    - characters: List<Character>
    - propertiesFactory: CharacterPropertiesFactory

    + addCharacter(c:char, font:String, color:String, size:int): void
    + editCharacterProperties(index:int, font:String, color:String, size:int): void
    + saveToFile(filename:String): void <<throws IOException>>
    + loadFromFile(filename:String): void <<throws IOException>>
}

class Driver {
 +  {static} main(String[] args): void <<throws IOException>>
}

Character "1" *-- CharacterProperties
CharacterPropertiesFactory "1" *-- CharacterProperties

Document "1" *-- Character
Document "1" *-- CharacterPropertiesFactory

Driver ..> Document : "Reference"
Document ..> CharacterProperties

@enduml